# dash

./: .gitexternals  .gitignore  .gitsubprojects  .travis.yml  AUTHORS  AUTHORS.txt  CMakeLists.txt  GNUmakefile  LICENSE.txt  README.md
CMake/: CPackConfig.cmake  CommonCPack.cmake  FindPackages.cmake  FindRequired.cmake  FindVRPN.cmake  UploadPPA.cmake  dash.cmake
dash/: Attribute.cpp  Attribute.h  AttributeIterator.h  CMakeLists.txt  ChildIterator.h  Commit.cpp  Commit.h  Context.cpp  Context.h  Node.cpp  Node.h  NodeVisitor.h  Serializable.h  Vector.h  VectorIterator.h  Version.cpp  Version.h.in  VisitorResult.h  api.h  attribute.cpp  attribute.h  commit.cpp  commit.h  context.cpp  context.h  dash.h  node.cpp  node.h  nodeVisitor.h  types.h  version.cpp  version.in.h  visitorResult.h
dash/co/: Serialization.cpp  Serialization.h
dash/detail/: attribute.cpp  attribute.h  attributeIterator.h  change.cpp  change.h  childIterator.h  commit.cpp  commit.h  commitChange.cpp  commitChange.h  context.cpp  context.h  contextChange.cpp  contextChange.h  contextCommit.cpp  contextCommit.h  contextPtr.h  node.cpp  node.h  parentIterator.h  serializable.h  types.h
doc/: CMakeLists.txt  Doxyfile  DoxygenLayout.xml  README_Windows.txt  RelNotes.md  compiling.dox  issues.dox  logo.graffle  main.dox  multibuffer.dox  other.dox  overview.dox  release-notes.dox  threading.dox
doc/images/: dash.graffle  logo.graffle
tests/: CMakeLists.txt  common.cxx  common.h  node.h  serialize.h  test.h
tests/attribute/: issue3.cpp  issue6.cpp  main.cpp  readwrite.cpp  serialize.cpp
tests/circularity/: circularity.cpp
tests/co/: attribute_serialize.cpp  node_serialize.cpp
tests/context/: commit_serialize.cpp  copy.cpp  main.cpp
tests/contextPtr/: perf.cpp
tests/node/: build.cpp  serialize.cpp  visitor.cpp
tests/node/perf/: build.cpp
tests/pipeline/: circularity.cpp  perf-pipelineMT.cpp  pipelineMT.cpp  pipelineMTperf.cpp  pipelineST.cpp
tests/vector/: serialize.cpp  vector.cpp
